Fix header readability

--- a/assets/scss/breakpoints/_mobileup.scss
+++ b/assets/scss/breakpoints/_mobileup.scss
@@ -193,6 +193,7 @@ HEADER STYLING
 
 		a {
 			color: white;
+			text-shadow: 0 0 10px rgba(0,0,0,0.5);
 			text-decoration: none; 
 		}
 	}
